--- a/test1.html
+++ b/test1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<HTML>
+<html>
 <HEAD> 
 <META http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
 <TITLE></TITLE>
@@ -18,4 +18,4 @@ if(navigator.geolocation){
 test
 
 </BODY>
-</HTML>
+</html>
